--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -2,14 +2,6 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
-  <object class="GtkTreeStore" id="treestore1">
-    <columns>
-      <!-- column-name gchararray1_filename -->
-      <column type="gchararray"/>
-      <!-- column-name gchararray2_filename -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">PlotCommander: file-oriented plotting</property>
@@ -192,35 +184,16 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hscroll_policy">natural</property>
-                    <property name="model">treestore1</property>
-                    <property name="expander_column">treeviewcolumn2</property>
+                    <property name="enable_search">False</property>
                     <property name="search_column">0</property>
+                    <property name="rubber_banding">True</property>
+                    <property name="enable_grid_lines">both</property>
+                    <property name="enable_tree_lines">True</property>
+                    <property name="activate_on_single_click">True</property>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection" id="treeview-selection">
                         <property name="mode">multiple</property>
                         <signal name="changed" handler="on_treeview1_selection_changed" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkTreeViewColumn" id="treeviewcolumn1">
-                        <property name="title" translatable="yes">show</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkTreeViewColumn" id="treeviewcolumn2">
-                        <property name="title" translatable="yes">file name</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext2"/>
-                          <attributes>
-                            <attribute name="text">1</attribute>
-                          </attributes>
-                        </child>
                       </object>
                     </child>
                   </object>
@@ -260,8 +233,6 @@
             <property name="margin_right">10</property>
             <property name="margin_start">10</property>
             <property name="margin_end">10</property>
-            <property name="margin_top">6</property>
-            <property name="margin_bottom">6</property>
             <property name="orientation">vertical</property>
           </object>
           <packing>
