--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -278,9 +278,61 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkTextView" id="textview1">
+                          <object class="GtkGrid" id="grid2">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
+                            <property name="can_focus">False</property>
+                            <child>
+                              <object class="GtkCheckButton" id="chk_xlogarithmic">
+                                <property name="label" translatable="yes">x logarithmic</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="xalign">0</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="chk_ylogarithmic">
+                                <property name="label" translatable="yes">y logarithmic</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="xalign">0</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">1</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="chk_autoscale">
+                                <property name="label" translatable="yes">autoscale</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="xalign">0</property>
+                                <property name="active">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
                           </object>
                           <packing>
                             <property name="position">1</property>
@@ -290,7 +342,7 @@
                           <object class="GtkLabel" id="label3">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">File info</property>
+                            <property name="label" translatable="yes">Plot settings</property>
                           </object>
                           <packing>
                             <property name="position">1</property>
@@ -346,11 +398,10 @@
                         <property name="enable_search">False</property>
                         <property name="search_column">0</property>
                         <property name="rubber_banding">True</property>
-                        <property name="enable_grid_lines">none</property>
                         <property name="enable_tree_lines">True</property>
                         <property name="activate_on_single_click">True</property>
-						<signal name="row-expanded" handler="on_treeview1_row_expanded" swapped="no"/>
-						<signal name="row-collapsed" handler="on_treeview1_row_collapsed" swapped="no"/>
+                        <signal name="row-collapsed" handler="on_treeview1_row_collapsed" swapped="no"/>
+                        <signal name="row-expanded" handler="on_treeview1_row_expanded" swapped="no"/>
                         <child internal-child="selection">
                           <object class="GtkTreeSelection" id="treeview-selection">
                             <property name="mode">multiple</property>
