--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -3,6 +3,9 @@
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkListStore" id="liststore1"/>
+  <object class="GtkTextBuffer" id="textbuffer1">
+    <property name="text" translatable="yes"></property>
+  </object>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">PlotCommander: file-oriented plotting</property>
@@ -324,15 +327,6 @@
                                 <property name="top_attach">2</property>
                               </packing>
                             </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
-                            <child>
-                              <placeholder/>
-                            </child>
                           </object>
                           <packing>
                             <property name="position">1</property>
@@ -350,9 +344,10 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkTextView" id="textview2">
+                          <object class="GtkTextView" id="txt_rc">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="buffer">textbuffer1</property>
                           </object>
                           <packing>
                             <property name="position">2</property>
