--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -176,17 +176,20 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="position">350</property>
+            <property name="wide_handle">True</property>
             <child>
-              <object class="GtkBox" id="box3">
+              <object class="GtkPaned" id="paned2">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
                 <property name="orientation">vertical</property>
+                <property name="wide_handle">True</property>
                 <child>
                   <object class="GtkExpander" id="expander1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <child>
                       <object class="GtkNotebook" id="notebook1">
+                        <property name="height_request">200</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <child>
@@ -356,7 +359,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
-                                    <property name="xalign">0.019999999552965164</property>
+                                    <property name="xalign">0</property>
                                     <property name="active">True</property>
                                     <property name="draw_indicator">True</property>
                                     <signal name="toggled" handler="on_plotcommand_toggled" swapped="no"/>
@@ -374,7 +377,6 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="active">True</property>
                                     <property name="draw_indicator">True</property>
                                     <property name="group">rad_plotstyle_lines</property>
                                     <signal name="toggled" handler="on_plotcommand_toggled" swapped="no"/>
@@ -392,7 +394,6 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="active">True</property>
                                     <property name="draw_indicator">True</property>
                                     <property name="group">rad_plotstyle_lines</property>
                                     <signal name="toggled" handler="on_plotcommand_toggled" swapped="no"/>
@@ -411,13 +412,24 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkTextView" id="txt_rc">
+                              <object class="GtkScrolledWindow" id="scrolledwindow2">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="buffer">textbuffer1</property>
+                                <property name="shadow_type">in</property>
+                                <child>
+                                  <object class="GtkTextView" id="txt_rc">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="margin_bottom">1</property>
+                                    <property name="hscroll_policy">natural</property>
+                                    <property name="right_margin">6</property>
+                                    <property name="buffer">textbuffer1</property>
+                                    <property name="monospace">True</property>
+                                  </object>
+                                </child>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
+                                <property name="expand">True</property>
                                 <property name="fill">True</property>
                                 <property name="position">1</property>
                               </packing>
@@ -452,9 +464,8 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">0</property>
+                    <property name="resize">False</property>
+                    <property name="shrink">True</property>
                   </packing>
                 </child>
                 <child>
@@ -484,9 +495,8 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="expand">True</property>
-                    <property name="fill">True</property>
-                    <property name="position">2</property>
+                    <property name="resize">True</property>
+                    <property name="shrink">False</property>
                   </packing>
                 </child>
               </object>
