--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -490,7 +490,17 @@
                                     <property name="can_focus">False</property>
                                     <property name="homogeneous">True</property>
                                     <child>
-                                      <placeholder/>
+                                      <object class="GtkButton" id="btn_plotrc_replot">
+                                        <property name="label" translatable="yes">Replot</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">0</property>
+                                      </packing>
                                     </child>
                                     <child>
                                       <object class="GtkButton" id="btn_plotrc_save">
