--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -29,7 +29,7 @@
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkMenuBar" id="menubar1">
-                    <property name="visible">True</property>
+                    <property name="visible">False</property>
                     <property name="can_focus">False</property>
                     <child>
                       <object class="GtkMenuItem" id="menuitem1">
